--- a/feed-proxy/package.json
+++ b/feed-proxy/package.json
@@ -1,17 +1,13 @@
 {
   "name": "feed-proxy",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "type": "module",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "express": "^5.1.0",
+    "express": "^4.19.2",
     "node-fetch": "^3.3.2"
   }
 }
